# asgs

./: .asgs-msgr.py.swp  .gitignore  .logging.sh.swp  ASGS_Kickstarting.md  ASGS_RMQMessaging.md  ASGS_Setup.md  ASGS_messaging.md  ASGS_setup.md  CODING-GUIDE  CONTRIBUTING  DESIGN-DESCRIPTION  Dockerfile  Dockerfile.git-master  FortCheck.py  FortCheck_nco.sh  INSTALL  INSTALLING  NAMtoOWI.pl  NAMtoOWIRamp.pl  PERL-MODULES  PERL-MODULES.notest  PERL-MODULES.wget  README-perlbrew.txt  README.local-perl.md  README.md  VERSION  al062018.fst.html  asgs-brew.pl  asgs-global.conf.sample  asgs-msgr.py  asgs-msgr.sh  asgs-msgr_startup.py  asgs-sendmail.pl  asgs_config.sh  asgs_main.sh  asgs_py_env.yml  config_defaults.sh  control-parameters-template.yaml  control_file_gen.pl  downloadBackgroundMet.sh  (+75 more)
.github/: CODEOWNERS
PERL/: ASGSUtil.pm  AdcGrid.pm  ArraySub.pm  NetCDF.pm  README  README-perlbrew-patch.txt  patchperl.patch  perltidyrc
READMEs/: README-release-process.txt  README-setup-email.txt  README-setup-ssh-config.txt  README.md
archive/: enstorm_pedir_removal.sh  ncem_archive.sh  ncfs_archive.sh  null_archive.sh  pedir_removal.sh  pedir_removal_driver.sh  pod_archive.sh  queenbee_archive.sh  ut-archive.sh
benchmarking/: adcprep.slurm  benchmark.sh  padcirc.slurm
ci/: 01-install-shell-only.sh  02-install-openmpi.sh  03-install-hdf5.sh  04-install-netcdf4.sh  05-build-adcircs.sh
cloud/: README
config/: asgs_config_032017_queenbee_LA_v12h-WithUpperAtch_setFlux_noWaves.sh  asgs_config_032017_topaz_LAv12h_setFlux.sh  asgs_config_2012_GustavTest.sh  asgs_config_beryl_desktop_ec95d.sh  asgs_config_beryl_desktop_shinnecock.sh  asgs_config_bill_stampede_tx2008r35h.sh  asgs_config_cindy_hatteras_hsofs.sh  asgs_config_cpra_2017_storm.sh  asgs_config_earl_lonestar_texasr35h.sh  asgs_config_exercise_hatteras_cpra2017.sh  asgs_config_exercise_hatteras_cpra2017_1180mcfs.sh  asgs_config_exercise_hatteras_cpra2017_862mcfs.sh  asgs_config_hermine_queenbee_flfwj.sh  asgs_config_irene_garnet_ec95d.sh  asgs_config_irene_swan_garnet_r3.sh  asgs_config_irene_swan_river_br_ncv6b.sh  asgs_config_isaac_garnet_cpra2017.sh  asgs_config_isaac_queenbee_cpra2017v12h.sh  asgs_config_isaac_queenbee_hsofs.sh  asgs_config_matthew_ensemble_hatteras_ec95d.sh  asgs_config_matthew_hatteras_hsofs.sh  asgs_config_matthew_hatteras_hsofs_da.sh  asgs_config_matthew_hatteras_hsofs_hindcastmsl.sh  asgs_config_matthew_queenbee_hsofs.sh  asgs_config_matthew_queenbee_hsofs_hindcast.sh  asgs_config_matthew_swan_hatteras_nc9.99.sh  asgs_config_matthew_swan_hatteras_nc9.99_hindcast.sh  asgs_config_mike_nam_cpra2017v12g-UpperAtch.sh  (+43 more)
doc/: aswip.1.txt  (+35 more)
tides/: CMakeLists.txt  FES952_interp.f  ec2001v2d_tide_interp.f  run_tpxoBoundaryInterp.sh  tide_fac.f  tide_fac.out  tides.in  tides_ec2001.f  tpxoBoundaryInterp.pl
(+4265 files in other folders)
